--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
 <body>
     <div id="app">
         <!-- 絞り込みラジオボタン -->
+
         <!-- ToDo テーブル -->
+        <table>
+            <thead>
+                <tr>
+                    <th class="id">ID</th>
+                    <th class="comment">コメント</th>
+                    <th class="state">状態</th>
+                    <th class="button">-</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="item in todos" v-bind:key="item.id">
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.comment}}</td>
+                    <td class="state">
+                        <!-- 状態変更ボタンのモック -->
+                        <button>{{ item.state }}</button>
+                    </td>
+                    <td class="button">
+                        <!-- 削除ボタンのモック -->
+                        <button>削除</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
         <!-- 新規登録フォーム -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
