Todoテーブルへの行追加を入力フォームから実施できるように変更

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         </table>
 
         <!-- 新規登録フォーム -->
+        <h2>新しい作業の追加</h2>
+        <form class="add-form" v-on:submit.prevent="doAdd">
+            <!-- コメント入力フォーム -->
+            コメント <input type="text" ref="comment">
+            <!-- 追加ボタンのモック -->
+            <button type="submit">追加</button>
+        </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="main.js"></script>
